JumpScript/tests/baselines/reference/duplicateVarsAcrossFileBoundaries.errors.txt
tests/cases/compiler/duplicateVarsAcrossFileBoundaries_1.jump(1,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'number', but here has type 'boolean'.
tests/cases/compiler/duplicateVarsAcrossFileBoundaries_2.jump(1,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'number', but here has type 'string'.
tests/cases/compiler/duplicateVarsAcrossFileBoundaries_2.jump(2,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type 'string', but here has type 'number'.
tests/cases/compiler/duplicateVarsAcrossFileBoundaries_2.jump(3,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'z' must be of type 'number', but here has type 'boolean'.


==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_0.jump (0 errors) ====
    var x = 3;
    var y = "";
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_1.jump (1 errors) ====
    var x = true;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'number', but here has type 'boolean'.
    var z = 3;
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_2.jump (3 errors) ====
    var x = "";
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'number', but here has type 'string'.
    var y = 3;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type 'string', but here has type 'number'.
    var z = false;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'z' must be of type 'number', but here has type 'boolean'.
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_3.jump (0 errors) ====
    var x = 0;
    var y = "";
    var z = 0;
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_4.jump (0 errors) ====
    module P { }
    import p = P;
    var q;
    
==== tests/cases/compiler/duplicateVarsAcrossFileBoundaries_5.jump (0 errors) ====
    module Q { }
    import q = Q;
    var p;